--- a/KPU_T/app/src/main/res/layout/fragment_noticeboard.xml
+++ b/KPU_T/app/src/main/res/layout/fragment_noticeboard.xml
@@ -6,9 +6,10 @@
     tools:context=".Noticeboard">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+
+    <ListView
+        android:id="@+id/boardView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
