--- a/KPU_T/app/src/main/res/layout/activity_findpw.xml
+++ b/KPU_T/app/src/main/res/layout/activity_findpw.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원가입"
+            android:text="비밀번호 재설정"
             android:textSize="40sp"
             android:textStyle="bold"
             android:layout_gravity="center"
