--- a/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
+++ b/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
@@ -76,6 +76,31 @@
         app:layout_constraintStart_toEndOf="@id/endTV"
         app:layout_constraintTop_toBottomOf="@id/startET" />
 
+    <TextView
+        android:id="@+id/bodyTV"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:padding="6dp"
+        android:text="내용 : "
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/endTV" />
+
+    <EditText
+        android:id="@+id/bodyET"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:gravity="start|top"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/bodyTV"
+        app:layout_constraintTop_toBottomOf="@id/endET" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/finishfab"
         android:layout_width="wrap_content"
