--- a/KPU_T/app/src/main/res/layout/activity_sign_in.xml
+++ b/KPU_T/app/src/main/res/layout/activity_sign_in.xml
@@ -45,6 +45,25 @@
             android:textSize="20sp"
             />
 
+
+        <RadioGroup
+            android:id="@+id/genderGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/malebtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="남자" />
+
+            <RadioButton
+                android:id="@+id/femalebtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="여자" />
+        </RadioGroup>
+
         <Button
             android:background="#ffffa500"
             android:layout_marginTop="20dp"
