--- a/KPU_T/app/src/main/res/layout/activity_taxi_main.xml
+++ b/KPU_T/app/src/main/res/layout/activity_taxi_main.xml
@@ -23,13 +23,8 @@
         android:background="@android:color/white"
         android:layout_weight="1"
         app:tabRippleColor="#FFFFA500"
-
+        app:tabIndicatorColor="#FFFFa500"
+        app:tabSelectedTextColor="#FFFFa500"
         />
-
-
-
-
-
-
 
 </LinearLayout>
